...
    "sold": "{{value}} sold",
    "bought": "{{value}} bought"
  },
  "quickActions": {
    "postNew": "Post New Item",
    "myListings": "My Listings",
    "messages": "Messages",
    "reviews": "Ratings & Reviews",
    "browse": "Browse Listings",
    "saved": "Saved Items",
    "contactSupport": "Contact support",
    "shareMyProfile": "Share my profile"
  },
...
